ref: use echo instead of whatever i wrote before
